--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
-  "name": "lb-utils",
+  "name": "lebanon-utils",
   "version": "1.0.0",
   "description": "utility functions that could be used in lebanese apps",
   "main": "index.js",
-  "author": "Ghamza-Jd",
+  "author": "hamzajd",
   "license": "MIT",
+  "keywords": ["utils", "lebanon", "lebanon utils"],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Ghamza-Jd/lebanon-utils.git"
+  },
+  "homepage": "https://github.com/Ghamza-Jd/lebanon-utils.git",
   "scripts": {
     "test": "mocha ./__tests__/**/*.test.js",
     "coverage": "nyc --report=text --reporter=text --branches=80 --functions=80 --lines=80 --statements=80 --check-coverage=true yarn test"
