--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "index.js",
   "author": "hamzajd",
   "license": "MIT",
-  "keywords": ["utils", "lebanon", "lebanon utils"],
+  "keywords": [
+    "utils",
+    "lebanon",
+    "lebanon utils"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/Ghamza-Jd/lebanon-utils.git"
@@ -18,5 +22,8 @@
   "devDependencies": {
     "chai": "^4.3.4",
     "mocha": "^8.3.2"
+  },
+  "dependencies": {
+    "ohm-js": "^15.4.1"
   }
 }
